2017-03-07  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/amstar.pl: Check first line of errors

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/diskflat-device.c (diskflat_clear_and_prepare_label):
	  Check result of ftruncate

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/ambsdtar.c: Typo
	* application-src/amstar.c (amstar_restore, amstar_validate): filter
	  stdout and stderr

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/diskflat-device.c (diskflat_clear_and_prepare_label):
	  ftruncate the file

2017-03-06  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/CheckDump.pm (run): Set all_copy=1 to restore()
	* perl/Amanda/Restore.pm (restore): Pass all_copy to make_plan()

2017-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Recovery/Clerk.pm: Typo
	* perl/make_html.pl: Fix man pages

2017-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* NEWS, ReleaseNotes: 3.4.3
	* VERSION: 3.4.3

2017-02-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Tapelist.swg (remove_tapelabel): Call C_remove_tapelabel
	* server-src/tapefile.c (add_tapelabel): Verify the label is not
	  already in the tapelist
	* installcheck/Amanda_Tapelist.pl: Fix/add check

2017-02-27  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/tapefile.c (tape_overwrite, nb_tape_in_storage): Take
	  storage as argument, Check NULL storage name and labelstr
	* server-src/tapefile.h (tape_overwrite, nb_tape_in_storage): New
	  prototypes
	* server-src/planner.c (when_overwrite): Pass the storage argument
	  to tape_overwrite and nb_tape_in_storage

2017-02-24  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/ndmp-device.c (read_to_connection_impl):Correctlycompute
	  the offset

2017-02-23  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amcleanupdisk.pl: Fix renaming tmp holding file
